tests/errors/functions.pa
program gcd(output);
var a, b: integer;

function osd(a: integer): real;
	begin
		
	end;
function f(a: boolean; var o: integer): integer;
	var n:integer;
	begin
	f := f(a, b);
	end;

function   abc(a1   :  boolean)  :   integer; FORWARD;
function ABC;
	var a , B: integer;
	begin
		abc := abc(a1);
	end;

function aosd(a: integer): real;
	begin
		a := abc(true);
	end;

begin
end.
